db working with user table, registering new user with first constraint

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 $ pip install flask
 $ pip install flask_sqlalchemy
-$ pip install flask_marshmallow
-$ pip install marshmallow-sqlalchemy
+$ python
+>>> from api import db, Users, Posts
+>>> db.create_all()
+>>> exit()
